# coaching-csr

call-center-dashboard/: main.py  package.json
call-center-dashboard/app/: page.tsx
call-center-dashboard/components/: AgentPerformance.tsx  AgentSuggestions.tsx  LiveCalls.tsx  LiveTranscription.tsx
call-center-dashboard/components/ui/: button.tsx
call-center-dashboard/hooks/: useFetchCalls.ts
csr-coaching/: .replit  main.py  pyproject.toml
dashboard/: package.json
dashboard/app/: layout.tsx  page.tsx
dashboard/components/: agent-details-dialog.tsx  agents-performance-table.tsx  ai-insights.tsx  avg-call-duration-card.tsx  calls-table.tsx  chart-tooltip.tsx  coaching-opportunities.tsx  date-filter.tsx  date-range-picker.tsx  date-range-select.tsx  hangup-metrics-chart.tsx  hangup-timeline-chart.tsx  metric-card.tsx  playbook-score-chart.tsx  revenue-chart.tsx  top-objections-chart.tsx
elevenlabs-twilio-stream/: .replit  index.js  package-lock.json  package.json
