[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Shubham Mazumder <shubham.mazumder@gosameday.com>"]
requires-python = ">=3.11"
dependencies = [
    "elevenlabs>=1.51.0",
    "fastapi>=0.115.8",
    "firebase-admin>=6.6.0",
    "google-generativeai>=0.8.4",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
]
